# IMC_Prosperity4

./: .gitignore  BACKTEST.md  CLAUDE.md  DATA_WORKSHOP.md  OPTIMIZER.md  README.md  analysis.py  bt_stats.py  osmium_deep.py  pattern_hunt.py  pattern_hunt2.py  prosperity4_round2_notes.md  pyproject.toml  run.ps1  run.sh  run_viz.ps1  strategy_sim.py
.claude/: settings.local.json
analysis/: factor_models.ipynb  tutorial_eda.py
backtester/: README.md  cli_mc.py  cli_replay.py  dashboard_server.py  data.py  monte_carlo.py  open.py  runner.py
calibration/: ANALYSIS_PHILOSOPHY.md  README.md  audit_portal_log.py  extract_fv_and_book.py  params_schema.md  round1_calibration.md  run_pipeline.py  test_acceptance.py  validate.py  validate_against_data.py  validate_round1.py
manual/: 02_solution.md
memory/: MEMORY.md  backtester_fv_modes.md  mcbt_sim_artifact_warning.md
optimizer/: __init__.py  cli.py  objective.py  runner.py  samplers.py  space.py  store.py  study.py  trader_api.py  validators.py
ruben_round1_analysis/: FINDINGS.md  aco_hidden_signal.py  aco_hidden_signal_v2.py  aco_patterns.py  aco_signal_sweep.py  bot3_timing.py  cross_product.py  fv_accuracy.py  grid_search.py  ipr_bots.py
ruben_round1_strategies/: MrPing.py  MrPing_v2.py  MrPing_v4.py  MrPing_v5.py  MrPing_v6.py  MrPing_v7.py  Po.py  TaiLUNG.py  TaiLUNG_v2.py  TaiLUNG_v3.py  TaiLUNG_v4_1.py  TaiLUNG_v4_2.py  TaiLUNG_v5.py  TaiLUNG_v6.py  TaiLUNG_v7.py  TaiLUNG_v7c.py  TaiLUNG_v8.py  alex_best.py  alex_bestattempt (1).py  b.py  data_gather.py  fugaizi_trading.py  oogway_V2.py  oogway_V3.py  oogway_V4.py  oogway_V5.py  oogway_trader.py  po_v2.py  po_v3.py  sensei.py  shifu_V2.py  shifu_V3.py  shifu_V4.py  shifu_trader.py  submission_104047.py  submission_105289.py  submission_107406.py  tigress.py  tigress_A.py  tigress_B.py  (+4 more)
rust_simulator/: Cargo.toml
scripts/: bt_stats.py  csv_to_parquet.py  generate_r3_asset_rs.py  python_strategy_worker.py  write_r3_calibration_md.py
studies/: demo_osmium.yaml  demo_osmium_trader.py  round2_full.yaml  round2_signal_tuning.yaml  round2_smoke.yaml  round2_tunable.py  round3_param_search.yaml  round3_param_search_v2.yaml  round3_param_search_v3.yaml  round3_param_search_v4.yaml  round3_param_search_v5.yaml  round3_tunable.py  round3_tunable_v2.py  round3_tunable_v3.py  round3_tunable_v4.py  round3_tunable_v5.py
wasm_compute/: Cargo.toml
wasm_compute/src/: calibration.rs  formula_search.rs  lib.rs
(+5937 files in other folders)
