[project]
name = "prosperity4mcbt"
description = "Monte Carlo backtester and research CLI for IMC Prosperity 4 algorithms"
version = "0.0.0"
requires-python = ">= 3.9"
dependencies = [
    "ipython>=8.18.1",
    "jsonpickle>=4.0.2",
    "numpy>=1.26.4",
    "orjson>=3.10.15",
    "pandas>=2.2.3",
    "tqdm>=4.67.1",
    "typer>=0.15.2",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
prosperity3bt = "backtester.cli_replay:main"
prosperity4mcbt = "backtester.cli_mc:main"

[tool.setuptools.packages.find]
include = ["backtester"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
ignore_missing_imports = true
