[package]
name = "wasm_compute"
version = "0.1.0"
edition = "2021"
authors = ["Prosperity Workshop"]
description = "Rust/WASM compute kernels for the Prosperity Workshop visualizer"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.wasm-pack.profile.release]
# The bundled wasm-opt on Windows lags behind the features LLVM emits
# (bulk-memory, nontrapping-fptoint). Skip it -- LLVM's opt-level=3 + LTO=fat
# already produces excellent output; wasm-opt usually adds <10% on top.
wasm-opt = false
